--- a/jp-year-converter/ja/index.html
+++ b/jp-year-converter/ja/index.html
@@ -9,16 +9,16 @@
 <meta content="元台, 和暦, 西暦, 令和, 平成, 昭和, 大正, 明治, 変換ツール" name="keywords"/>
 <meta content="日本元台 ⇄ 西暦 変換ツール" property="og:title"/>
 <meta content="ワンクリックで日本の元台と西暦を変換できます。" property="og:description"/>
-<meta content="https://wp.mahalohana-bruce.com/Jap_year_converter/index.html" property="og:url"/>
-<meta content="https://wp.mahalohana-bruce.com/og-image.png" property="og:image"/>
+<meta content="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" property="og:url"/>
+<meta content="https://utilities.mahalohana-bruce.com/og-image.png" property="og:image"/>
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="#4a90e2" name="theme-color"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/index.html" hreflang="ja" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/ko.html" hreflang="ko" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/en.html" hreflang="en" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/vi.html" hreflang="vi" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/index.html" hreflang="x-default" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/index.html" rel="canonical"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="ja" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html" hreflang="ko" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" hreflang="en" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" hreflang="vi" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="x-default" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" rel="canonical"/>
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-0ED4W9VBFJ"></script>
 <script>
@@ -34,19 +34,18 @@
   (function () {
     const lang = navigator.language || navigator.userLanguage;
     const map = {
-      'ja': '/Jap_year_converter/index.html',
-      'ko': '/Jap_year_converter/ko.html',
-      'en': '/Jap_year_converter/en.html',
-      'vi': '/Jap_year_converter/vi.html',
-      'zh': '/Jap_year_converter/index.html' // 중국어는 일본어 페이지로
+      'ja': '/jp-year-converter/ja/jindex.html',
+      'ko': '/jp-year-converter/ko/jindex.html',
+      'en': '/jp-year-converter/en/jindex.html',
+      'vi': '/jp-year-converter/vi/jindex.html',
+      'zh': '/jp-year-converter/ja/jindex.html'
     };
-
     const current = window.location.pathname;
     const alreadyLocalized = [
-      '/Jap_year_converter/index.html',
-      '/Jap_year_converter/ko.html',
-      '/Jap_year_converter/en.html',
-      '/Jap_year_converter/vi.html'
+      '/jp-year-converter/jp/index.html',
+      '/jp-year-converter/ko/index.html',
+      '/jp-year-converter/en/index.html',
+      '/jp-year-converter/vi/index.html'
     ];
 
     if (!alreadyLocalized.includes(current)) {
@@ -168,11 +167,11 @@
 <body>
 <div class="container">
 <div class="language-switcher">
-<a class="active" href="/Jap_year_converter/index.html"><img alt="日本語" src="https://flagcdn.com/w40/jp.png"/>日本語</a> |
-      <a href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html"><img alt="한국어" src="https://flagcdn.com/w40/kr.png"/>한국어</a> |
-      <a href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html"><img alt="English" src="https://flagcdn.com/w40/gb.png"/>English</a> |
-      <a href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html"><img alt="Tiếng Việt" src="https://flagcdn.com/w40/vn.png"/>Tiếng Việt</a> |
-      <a href="/Jap_year_converter/index.html"><img alt="中文" src="https://flagcdn.com/w40/cn.png"/>中文</a>
+<a href="/jp-year-converter/ja/index.html"><img alt="日本語" src="https://flagcdn.com/w40/jp.png"/>日本語</a> |
+      <a href="/jp-year-converter/ko/index.html"><img alt="한국어" src="https://flagcdn.com/w40/kr.png"/>한국어</a> |
+      <a class="active" href="/jp-year-converter/en/index.html"><img alt="English" src="https://flagcdn.com/w40/gb.png"/>English</a> |
+      <a href="/jp-year-converter/vi/index.html"><img alt="Tiếng Việt" src="https://flagcdn.com/w40/vn.png"/>Tiếng Việt</a> |
+      <a href="/jp-year-converter/ja/index.html"><img alt="中文" src="https://flagcdn.com/w40/cn.png"/>中文</a>
 </div>
 <h1>日本の元台変換ツール｜西暦 ⇄ 元台</h1>
 <label for="mode">変換方向を選択：</label>
