--- a/jp-year-converter/vi/index.html
+++ b/jp-year-converter/vi/index.html
@@ -9,16 +9,16 @@
 <meta content="niên hiệu Nhật Bản, dương lịch, Reiwa, Heisei, Showa, Taisho, Meiji, công cụ chuyển đổi" name="keywords"/>
 <meta content="Công cụ chuyển đổi Niên hiệu ⇄ Dương lịch Nhật Bản" property="og:title"/>
 <meta content="Chuyển đổi dễ dàng giữa niên hiệu Nhật Bản và năm dương lịch chỉ với một cú nhấp chuột." property="og:description"/>
-<meta content="https://wp.mahalohana-bruce.com/Jap_year_converter/vi.html" property="og:url"/>
-<meta content="https://wp.mahalohana-bruce.com/og-image.png" property="og:image"/>
+<meta content="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" property="og:url"/>
+<meta content="https://utilities.mahalohana-bruce.com/og-image.png" property="og:image"/>
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="#4a90e2" name="theme-color"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/index.html" hreflang="ja" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/ko.html" hreflang="ko" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/en.html" hreflang="en" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/vi.html" hreflang="vi" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/index.html" hreflang="x-default" rel="alternate"/>
-<link href="https://wp.mahalohana-bruce.com/Jap_year_converter/vi.html" rel="canonical"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="ja" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html" hreflang="ko" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" hreflang="en" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" hreflang="vi" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="x-default" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" rel="canonical"/>
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-0ED4W9VBFJ"></script>
 <script>
@@ -30,6 +30,31 @@
     </script>
 <script async="" crossorigin="anonymous" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5508768187151867"></script>
 <script async="" custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+<script>
+  (function () {
+    const lang = navigator.language || navigator.userLanguage;
+    const map = {
+      'ja': '/jp-year-converter/ja/jindex.html',
+      'ko': '/jp-year-converter/ko/jindex.html',
+      'en': '/jp-year-converter/en/jindex.html',
+      'vi': '/jp-year-converter/vi/jindex.html',
+      'zh': '/jp-year-converter/ja/jindex.html'
+    };
+    const current = window.location.pathname;
+    const alreadyLocalized = [
+      '/jp-year-converter/jp/index.html',
+      '/jp-year-converter/ko/index.html',
+      '/jp-year-converter/en/index.html',
+      '/jp-year-converter/vi/index.html'
+    ];
+
+    if (!alreadyLocalized.includes(current)) {
+      const shortLang = lang.toLowerCase().slice(0, 2);
+      const redirectTo = map[shortLang] || map['vi'];
+      window.location.replace(redirectTo);
+    }
+  })();
+</script>
 <style>
     html { font-size: 16px; }
     @media (max-width: 768px) { html { font-size: 14px; } }
@@ -136,11 +161,11 @@
 <body>
 <div class="container">
 <div class="language-switcher">
-<a href="/Jap_year_converter/index.html"><img alt="日本語" src="https://flagcdn.com/w40/jp.png"/>日本語</a> |
-      <a href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html"><img alt="한국어" src="https://flagcdn.com/w40/kr.png"/>한국어</a> |
-      <a href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html"><img alt="English" src="https://flagcdn.com/w40/gb.png"/>English</a> |
-      <a class="active" href="/Jap_year_converter/vi.html"><img alt="Tiếng Việt" src="https://flagcdn.com/w40/vn.png"/>Tiếng Việt</a> |
-      <a href="/Jap_year_converter/index.html"><img alt="中文" src="https://flagcdn.com/w40/cn.png"/>中文</a>
+<a href="/jp-year-converter/ja/index.html"><img alt="日本語" src="https://flagcdn.com/w40/jp.png"/>日本語</a> |
+      <a href="/jp-year-converter/ko/index.html"><img alt="한국어" src="https://flagcdn.com/w40/kr.png"/>한국어</a> |
+      <a class="active" href="/jp-year-converter/en/index.html"><img alt="English" src="https://flagcdn.com/w40/gb.png"/>English</a> |
+      <a href="/jp-year-converter/vi/index.html"><img alt="Tiếng Việt" src="https://flagcdn.com/w40/vn.png"/>Tiếng Việt</a> |
+      <a href="/jp-year-converter/ja/index.html"><img alt="中文" src="https://flagcdn.com/w40/cn.png"/>中文</a>
 </div>
 <h1>Công cụ chuyển đổi Niên hiệu Nhật Bản Dương lịch ⇄ Niên hiệu</h1>
 <label for="mode">Chọn hướng chuyển đổi:</label>
