--- a/jp-year-converter/ko/index.html
+++ b/jp-year-converter/ko/index.html
@@ -154,8 +154,8 @@
 <div class="container">
 <div class="language-switcher">
 <a href="/jp-year-converter/ja/index.html"><img alt="日本語" src="https://flagcdn.com/w40/jp.png"/>日本語</a> |
-      <a href="/jp-year-converter/ko/index.html"><img alt="한국어" src="https://flagcdn.com/w40/kr.png"/>한국어</a> |
-      <a class="active" href="/jp-year-converter/en/index.html"><img alt="English" src="https://flagcdn.com/w40/gb.png"/>English</a> |
+      <a class="active" href="/jp-year-converter/ko/index.html"><img alt="한국어" src="https://flagcdn.com/w40/kr.png"/>한국어</a> |
+      <a href="/jp-year-converter/en/index.html"><img alt="English" src="https://flagcdn.com/w40/gb.png"/>English</a> |
       <a href="/jp-year-converter/vi/index.html"><img alt="Tiếng Việt" src="https://flagcdn.com/w40/vn.png"/>Tiếng Việt</a> |
       <a href="/jp-year-converter/ja/index.html"><img alt="中文" src="https://flagcdn.com/w40/cn.png"/>中文</a>
 </div>
