--- a/jp-year-converter/ko/index.html
+++ b/jp-year-converter/ko/index.html
@@ -20,12 +20,12 @@
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="x-default" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html" rel="canonical"/>
 <!-- Google tag (gtag.js) -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-0ED4W9VBFJ"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-67GGSZ6DT8"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-0ED4W9VBFJ');
+    gtag('config', 'G-67GGSZ6DT8');
   </script>
 <!-- Google AdSense -->
 <script async="" crossorigin="anonymous" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5508768187151867"></script>
