--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
    
     <title>Redirecting...</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-67GGSZ6DT8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-67GGSZ6DT8');
+</script>
   <body>
     <p>Redirecting to <a href="https://www.mahalohana-bruce.com">www.mahalohana-bruce.com</a></p>
   </body>
