--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-67GGSZ6DT8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-67GGSZ6DT8');
+  gtag('config', 'G-WF8ZL9QJHF');
 </script>
   </head>
   
