--- a/jp-year-converter/en/index.html
+++ b/jp-year-converter/en/index.html
@@ -20,13 +20,13 @@
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="x-default" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" rel="canonical"/>
 <!-- Google tag (gtag.js) -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-67GGSZ6DT8"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
 <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-67GGSZ6DT8');
+      gtag('config', 'G-WF8ZL9QJHF');
     </script>
 <script async="" crossorigin="anonymous" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5508768187151867"></script>
 <script async="" custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
