--- a/jp-year-converter/ja/index.html
+++ b/jp-year-converter/ja/index.html
@@ -19,6 +19,7 @@
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" hreflang="vi" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" hreflang="x-default" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/index.html" rel="canonical"/>
+<link rel="icon" href="https://utilities.mahalohana-bruce.com/jp-year-converter/jp/favicon.png" />
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
 <script>
