--- a/jp-eto-calculator/ja/index.html
+++ b/jp-eto-calculator/ja/index.html
@@ -5,18 +5,18 @@
   <title>干支計算機｜生年月日で十二支を簡単チェック</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-  <link rel="icon" href="/jp-eto-calculator/favicon.png" type="image/png">
-  <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/index.html">
+  <link rel="icon" href="/japan-eto-calculator/favicon.png" type="image/png">
+  <link rel="canonical" href="https://utilities.mahalohana-bruce.com/japan-eto-calculator/ja/index.html">
   <meta name="description" content="生年月日から干支（えと）を調べる無料の計算ツールです。立春基準にも対応。">
   <meta name="keywords" content="干支, 生年月日, 計算機, 十二支, 日本の干支">
   <meta property="og:title" content="干支計算機">
   <meta property="og:description" content="生年月日から干支（えと）を調べる無料ツール。">
-  <meta property="og:image" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/belt-convert.png">
-  <meta property="og:url" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/index.html">
+  <meta property="og:image" content="https://utilities.mahalohana-bruce.com/japan-eto-calculator/belt-convert.png">
+  <meta property="og:url" content="https://utilities.mahalohana-bruce.com/japan-eto-calculator/index.html">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="干支計算機｜生年月日で十二支を簡単チェック">
   <meta name="twitter:description" content="生年月日から干支を調べる無料のツールです。">
-  <meta name="twitter:image" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/belt-convert.png">
+  <meta name="twitter:image" content="https://utilities.mahalohana-bruce.com/japan-eto-calculator/belt-convert.png">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -259,6 +259,12 @@
     showResult('2000-01-01');
   </script>
   
+  <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPV6LHBP"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
     <!-- 디스플레이 광고 -->
     <ins class="adsbygoogle"
          style="display:block"
