--- a/jp-eto-calculator/en/index.html
+++ b/jp-eto-calculator/en/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>干支計算機｜生年月日で十二支を簡単チェック</title>
+  <title>Zodiac Calculator | Check Your Japanese Zodiac Sign by Birthday</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
   <link rel="icon" href="/jp-eto-calculator/favicon.png" type="image/png">
-  <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/index.html">
-  <meta name="description" content="生年月日から干支（えと）を調べる無料の計算ツールです。立春基準にも対応。">
-  <meta name="keywords" content="干支, 生年月日, 計算機, 十二支, 日本の干支">
-  <meta property="og:title" content="干支計算機">
-  <meta property="og:description" content="生年月日から干支（えと）を調べる無料ツール。">
-  <meta property="og:image" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/belt-convert.png">
-  <meta property="og:url" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/index.html">
+  <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/en/index.html">
+  <meta name="description" content="Free tool to find your Japanese zodiac sign (Eto) from your birthdate. Supports the seasonal Risshun boundary.">
+  <meta name="keywords" content="eto, zodiac, birthday, Japanese zodiac, eto calculator, 12 animals">
+  <meta property="og:title" content="Zodiac Calculator">
+  <meta property="og:description" content="Find your Eto (Japanese zodiac) using your birthdate. Free and accurate.">
+  <meta property="og:image" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/en/belt-convert.png">
+  <meta property="og:url" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/en/index.html">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="干支計算機｜生年月日で十二支を簡単チェック">
-  <meta name="twitter:description" content="生年月日から干支を調べる無料のツールです。">
-  <meta name="twitter:image" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/belt-convert.png">
+  <meta name="twitter:title" content="Zodiac Calculator | Check Your Japanese Zodiac Sign by Birthday">
+  <meta name="twitter:description" content="Check your zodiac animal easily by entering your birthday.">
+  <meta name="twitter:image" content="https://utilities.mahalohana-bruce.com/jp-eto-calculator/en/belt-convert.png">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebApplication",
-    "name": "干支計算機",
-    "url": "https://utilities.mahalohana-bruce.com/jp-eto-calculator/index.html",
+    "name": "Zodiac Calculator",
+    "url": "https://utilities.mahalohana-bruce.com/jp-eto-calculator/en/index.html",
     "applicationCategory": "Calculator",
     "operatingSystem": "All",
     "offers": {
@@ -32,7 +32,6 @@
     }
   }
   </script>
-  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -110,37 +109,19 @@
       h1 {
         font-size: 1.4em;
       }
-      .input-row {
-        flex-wrap: nowrap;
-        flex-direction: row;
-        flex-shrink: 1;
-        flex-grow: 1;
-        justify-content: space-between;
-      }
-      .input-row select {
-        flex: 1;
-        min-width: 30%;
-      }
-      input, button {
-        width: 100%;
-      }
-      .result {
-        font-size: 1.1em;
-        padding: 0.6em 0.8em;
-      }
     }
   </style>
 </head>
 <body>
   <div class="calculator">
-    <h1>干支を調べる</h1>
+    <h1>Check Your Japanese Zodiac</h1>
     <div class="description-box">
-      <strong>使い方：</strong><br>
-      1. 調べたい人の生年月日を入力してください（カレンダー形式または年・月・日の選択）。<br>
-      2. 「変換する」ボタンをクリックするか、エンターキーを押します。<br>
-      3. 干支、人気の干支、今日の運勢が表示されます。<br>
-      ※ 2月4日（立春）より前に生まれた場合は、前年の干支になります。<br>
-      <em style="font-size: 0.85em; color: #888;">※ このページをブックマークしておくと便利です。</em>
+      <strong>How to Use:</strong><br>
+      1. Enter your birthdate (using the calendar or dropdown).<br>
+      2. Click the "Convert" button or press Enter.<br>
+      3. You'll see your zodiac, trending signs, and today's fortune.<br>
+      * If born before February 4 (Risshun), the previous year's sign is applied.<br>
+      <em style="font-size: 0.85em; color: #888;">Bookmark this page for quick access anytime!</em>
     </div>
     <div class="input-row">
       <input type="date" id="birthDate">
@@ -258,23 +239,18 @@
     daySel.value = 1;
     showResult('2000-01-01');
   </script>
-  
-  <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPV6LHBP"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+ 
 
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPV6LHBP" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
-    <!-- 디스플레이 광고 -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5508768187151867"
-         data-ad-slot="8394292465"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-5508768187151867"
+       data-ad-slot="8394292465"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </body>
 </html>
