--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    
     <title>Redirecting...</title>
-
+<link rel="canonical" href="https://utilities.mahalohana-bruce.com/..." />
 
 
     <!-- Google tag (gtag.js) -->
