--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    
-    <title>Redirecting...</title>
+    <title>utilities.mahalohana-bruce.com Redirecting...</title>
 <link rel="canonical" href="https://utilities.mahalohana-bruce.com/..." />
 
 
