--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   
   <body>
-    <p>Redirecting to <a href="https://utilities.mahalohana-bruce.com">utilities.mahalohana-bruce.com</a></p>
+    <p>Redirecting to <a href="https://utilities.mahalohana-bruce.com">https://utilities.mahalohana-bruce.com</a></p>
   </body>
 </html>
