--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta property="og:url" content="https://utilities.mahalohana-bruce.com/" />
+  <meta property="og:url" content="https://utilities.mahalohana-bruce.com" />
 
     <title>utilities.mahalohana-bruce.com Redirecting...</title>
-<link rel="canonical" href="https://utilities.mahalohana-bruce.com/" />
+<link rel="canonical" href="https://utilities.mahalohana-bruce.com" />
 
 
     <!-- Google tag (gtag.js) -->
