--- a/jp-year-converter/ja/index.html
+++ b/jp-year-converter/ja/index.html
@@ -19,7 +19,8 @@
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" hreflang="vi" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ja/index.html" hreflang="x-default" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ja/index.html" rel="canonical"/>
-<link rel="icon" href="https://utilities.mahalohana-bruce.com/jp-year-converter/ja/favicon.png" />
+<link rel="icon" href="./favicon.ico">
+<link rel="icon" type="image/png" href="./favicon.png">      
       
 <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
