--- a/jp-year-converter/ko/index.html
+++ b/jp-year-converter/ko/index.html
@@ -19,8 +19,10 @@
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" hreflang="vi" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html" hreflang="x-default" rel="alternate"/>
 <link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html" rel="canonical"/>
-<link rel="icon" href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/favicon.png" />
-<!-- Google tag (gtag.js) -->
+<link rel="icon" href="./favicon.ico">
+<link rel="icon" type="image/png" href="./favicon.png">
+    
+    <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
