--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <title>utilities.mahalohana-bruce.com Redirecting...</title>
 <link rel="canonical" href="https://utilities.mahalohana-bruce.com" />
-
+<link rel="icon" href="/favicon.ico?v=2">
+<link rel="icon" type="image/png" href="/favicon.png?v=2">
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
