--- a/election-age-checker/ko/index.html
+++ b/election-age-checker/ko/index.html
@@ -3,13 +3,13 @@
 <head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0ED4W9VBFJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0ED4W9VBFJ');
+  gtag('config', 'G-WF8ZL9QJHF');
 </script>
 
   <meta charset="UTF-8" />
@@ -17,8 +17,8 @@
   <meta name="description" content="2025년 대통령 선거에 투표할 수 있는지 확인해보세요. 생년월일로 만 나이를 계산해드립니다." />
   <meta property="og:title" content="21대 대통령 선거 나이 판독기">
   <meta property="og:description" content="생년월일을 입력하면 2025년 대선에서 투표할 수 있는 나이인지 확인해줍니다.">
-  <meta property="og:image" content="https://yourdomain.com/images/og-image.png">
-  <meta property="og:url" content="https://yourdomain.com/election-age">
+  <meta property="og:image" content="https://utilities.mahalohana-bruce.com/images/og-image.png">
+  <meta property="og:url" content="https://utilities.mahalohana-bruce.com/election-age">
   <meta name="twitter:card" content="summary_large_image">
   <title>21대 대통령 선거 투표 가능 나이 판독기</title>
   <style>
