--- a/jp-year-converter/en/index.html
+++ b/jp-year-converter/en/index.html
@@ -9,18 +9,18 @@
 <meta content="Japanese era, wareki, Gregorian calendar, Reiwa, Heisei, Showa, Taisho, Meiji, conversion tool" name="keywords"/>
 <meta content="Japanese Era ⇄ Gregorian Converter" property="og:title"/>
 <meta content="Easily convert between Japanese eras and Gregorian years with one click." property="og:description"/>
-<meta content="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" property="og:url"/>
+<meta content="https://utilities.mahalohana-bruce.com/jp-year-converter/en/" property="og:url"/>
 <meta content="https://utilities.mahalohana-bruce.com/og-image.png" property="og:image"/>
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="#4a90e2" name="theme-color"/>
-<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ja/index.html" hreflang="ja" rel="alternate"/>
-<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/index.html" hreflang="ko" rel="alternate"/>
-<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" hreflang="en" rel="alternate"/>
-<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/index.html" hreflang="vi" rel="alternate"/>
-<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" hreflang="x-default" rel="alternate"/>
-<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/index.html" rel="canonical"/>
-<link rel="icon" href="./favicon.ico">
-<link rel="icon" href="./favicon.png" type="image/png">   
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ja/" hreflang="ja" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/ko/" hreflang="ko" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/" hreflang="en" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/vi/" hreflang="vi" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/" hreflang="x-default" rel="alternate"/>
+<link href="https://utilities.mahalohana-bruce.com/jp-year-converter/en/" rel="canonical"/>
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.png" type="image/png">   
       
       <!-- Google tag (gtag.js) -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WF8ZL9QJHF"></script>
