JP Era Converter: enforce single-mode UI + robust init; cache-bust v3. SW: expand cache + version bump; Add health_check script; fix broken links and favicons; register SW on main pages

--- a/jp-eto-calculator/en/index.html
+++ b/jp-eto-calculator/en/index.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://www.clarity.ms">
   
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-<link rel="icon" href="./favicon.ico">
-<link rel="icon" href="./favicon.png" type="image/png">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.png" type="image/png">
 <link rel="stylesheet" href="/css/design-system.css">   
   <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/en/index.html">
   <meta name="description" content="Free tool to find your Japanese zodiac sign (Eto) from your birthdate. Supports the seasonal Risshun boundary.">
