--- a/jp-eto-calculator/ko/index.html
+++ b/jp-eto-calculator/ko/index.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://www.clarity.ms">
   
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-<link rel="icon" href="./favicon.ico">
-<link rel="icon" href="./favicon.png" type="image/png">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.png" type="image/png">
 <link rel="stylesheet" href="/css/design-system.css">   
   <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ko/index.html">
   <meta name="description" content="생년월일로 간지(십이지)를 조사하는 무료 계산 도구입니다. 입춘 기준에도 대응합니다. 쥐, 소, 호랑이, 토끼, 용, 뱀, 말, 양, 원숭이, 닭, 개, 돼지의 12간지를 정확히 계산해드립니다.">
