--- a/jp-eto-calculator/vi/index.html
+++ b/jp-eto-calculator/vi/index.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://www.clarity.ms">
   
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-<link rel="icon" href="./favicon.ico">
-<link rel="icon" href="./favicon.png" type="image/png">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.png" type="image/png">
 <link rel="stylesheet" href="/css/design-system.css">   
   <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/vi/index.html">
   <meta name="description" content="Công cụ miễn phí giúp tra cứu con giáp (Can Chi) Nhật Bản từ ngày sinh. Hỗ trợ mốc tiết Lập Xuân.">
