--- a/jp-year-converter/ko/index.html
+++ b/jp-year-converter/ko/index.html
@@ -418,7 +418,7 @@
 </footer>
 
 
-<script src="/js/calculators/jp-year-converter.js"></script>
+<script src="/js/calculators/jp-year-converter.js?v=3"></script>
 
 <script type="application/ld+json">
 {
