--- a/jp-eto-calculator/ja/index.html
+++ b/jp-eto-calculator/ja/index.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://www.clarity.ms">
   
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-<link rel="icon" href="./favicon.ico">
-<link rel="icon" href="./favicon.png" type="image/png">   
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.png" type="image/png">
   <link rel="canonical" href="https://utilities.mahalohana-bruce.com/jp-eto-calculator/ja/index.html">
   
   <!-- Unified Design System -->
