--- a/jp-year-converter/en/index.html
+++ b/jp-year-converter/en/index.html
@@ -374,7 +374,7 @@
   <div overflow=""></div>
 </amp-ad>
 
-<script src="/js/calculators/jp-year-converter.js"></script>
+<script src="/js/calculators/jp-year-converter.js?v=3"></script>
 
 
 </body>
