--- a/jp-year-converter/ja/index.html
+++ b/jp-year-converter/ja/index.html
@@ -376,7 +376,7 @@
   <div overflow=""></div>
 </amp-ad>
 
-<script src="/js/calculators/jp-year-converter.js"></script>
+<script src="/js/calculators/jp-year-converter.js?v=3"></script>
 
 
 
