--- a/jp-year-converter/vi/index.html
+++ b/jp-year-converter/vi/index.html
@@ -375,7 +375,7 @@
   <div overflow=""></div>
 </amp-ad>
 
-<script src="/js/calculators/jp-year-converter.js"></script>
+<script src="/js/calculators/jp-year-converter.js?v=3"></script>
 
 <script type="application/ld+json">
 {
