Add AdSense auto ads script to language landing pages

--- a/ja/index.html
+++ b/ja/index.html
@@ -141,6 +141,9 @@
         gtag('config', 'G-HS98ZL6343');
     </script>
 
+    <!-- Google AdSense Auto Ads -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5508768187151867" crossorigin="anonymous"></script>
+
     <!-- Performance and SW Registration -->
     <script src="/js/common/performance-utils.js"></script>
     <script>
